--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -26,23 +26,23 @@
   ],
   "coyright": "Copyright (c) 2018 Microsoft",
   "dependencies": {
-    "@aspnet/signalr": "^1.1.0",
+    "@aspnet/signalr": "^1.1.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "adal-angular": "^1.0.17",
-    "ajv": "^6.8.1",
+    "ajv": "^6.10.0",
     "applicationinsights-js": "^1.0.20",
     "downloadjs": "^1.4.7",
     "moment": "^2.24.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.6",
     "react-infinite-calendar": "^2.3.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
-    "react-virtualized": "^9.21.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "react-virtualized": "^9.21.1",
     "rimraf": "^2.6.3",
     "tslib": "^1.9.3"
   },
@@ -53,7 +53,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "5.6.0",
+    "eslint": "^5.16.0",
     "eslint-config-defaults": "^9.0.0",
     "prettier-eslint": "^8.8.2"
   },
