--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,19 @@ steps:
     inputs:
       command: test
       projects: "**/*.Tests/*.csproj"
-      arguments: "--configuration $(buildConfiguration)"
+      arguments: "--configuration $(buildConfiguration) --logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura"
+
+  - script: |
+      dotnet tool install dotnet-reportgenerator-globaltool --tool-path . --version 4.0.0-rc4
+      .\reportgenerator "-reports:$(Build.SourcesDirectory)\CarWash.PWA.Tests\coverage.cobertura.xml" "-reporttypes:HTMLInline;HTMLChart"
+    displayName: 'Collect code coverage results'
+
+  - task: PublishCodeCoverageResults@1
+    displayName: 'Publish code coverage results'
+    inputs:
+      summaryFileLocation: $(Build.SourcesDirectory)\CarWash.PWA.Tests\coverage.cobertura.xml
+      reportDirectory: $(Build.SourcesDirectory)
+      codecoverageTool: cobertura
 
   - task: DotNetCoreCLI@2
     displayName: "Publish build artifacts"
