--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,15 +55,17 @@ steps:
       arguments: "--configuration $(buildConfiguration) --logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura"
 
   - script: |
+      mkdir $(Build.SourcesDirectory)\results
+      copy $(Build.SourcesDirectory)\CarWash.PWA.Tests\coverage.cobertura.xml $(Build.SourcesDirectory)\results
       dotnet tool install dotnet-reportgenerator-globaltool --tool-path . --version 4.0.0-rc4
-      .\reportgenerator "-reports:$(Build.SourcesDirectory)\CarWash.PWA.Tests\coverage.cobertura.xml" "-targetdir:\" "-reporttypes:HTMLInline;HTMLChart"
+      .\reportgenerator "-reports:$(Build.SourcesDirectory)\CarWash.PWA.Tests\coverage.cobertura.xml" "-targetdir:results" "-reporttypes:HTMLInline;HTMLChart"
     displayName: 'Collect code coverage results'
 
   - task: PublishCodeCoverageResults@1
     displayName: 'Publish code coverage results'
     inputs:
-      summaryFileLocation: $(Build.SourcesDirectory)\CarWash.PWA.Tests\coverage.cobertura.xml
-      reportDirectory: $(Build.SourcesDirectory)
+      summaryFileLocation: $(Build.SourcesDirectory)\results\coverage.cobertura.xml
+      reportDirectory: $(Build.SourcesDirectory)\results
       codecoverageTool: cobertura
 
   - task: DotNetCoreCLI@2
