--- a/CarWash.PWA/ClientApp/.eslintrc
+++ b/CarWash.PWA/ClientApp/.eslintrc
@@ -54,6 +54,8 @@
     "react/sort-comp": 1,
     "react/jsx-wrap-multilines": 1,
 
+    "no-param-reassign": 0,
+    "no-use-before-define": "off",
     "no-empty-label": 0,
     "space-after-keywords": 0,
     "space-return-throw-case": 0
