--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "carwash_pwa",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "private": true,
   "description": "This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.",
   "repository": {
@@ -26,23 +26,27 @@
   ],
   "coyright": "Copyright (c) 2018 Microsoft",
   "dependencies": {
-    "@aspnet/signalr": "^1.1.4",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@appannie/react-infinite-calendar": "^3.6.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@microsoft/applicationinsights-react-js": "^3.4.0",
+    "@microsoft/applicationinsights-web": "^2.8.9",
+    "@microsoft/signalr": "^7.0.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
+    "@mui/styles": "^5.11.0",
     "adal-angular": "^1.0.17",
     "ajv": "^6.12.2",
-    "applicationinsights-js": "^1.0.21",
     "downloadjs": "^1.4.7",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.13.1",
-    "react-infinite-calendar": "^1.2.2",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
-    "react-virtualized": "^9.21.2",
+    "react-transition-group": "^4.4.5",
+    "react-virtualized": "^9.22.3",
     "rimraf": "^2.6.3",
     "tslib": "^1.11.1"
   },
@@ -53,6 +57,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-defaults": "^9.0.0",
     "prettier-eslint": "^9.0.1"
